# Facer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
facer/: __init__.py  facer.py  typing.py  utils.py
tests/: test_facer.py
tests/images/: dawn-beatty_landmarks_0.csv  kyle-daigle_landmarks_0.csv  thomas-dohmke_landmarks_0.csv
