[tool.poetry]
name = "average-facer"
version = "0.6.0"
description = "Face averaging in Python made simple."
authors = ["John William Ruth Miller <john.w.millr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/johnwmillr/Facer"
repository = "https://github.com/johnwmillr/Facer"
keywords = ["opencv", "image-processing", "face-detection", "dlib", "face-average", "facer", "face-averaging"]

packages = [
    { include = "facer" }
]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.10.0.84"
dlib = "19.24.6"
matplotlib = "3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
