[tool.poetry]
name = "average-facer"
version = "0.7.1"
description = "Face averaging in Python made simple."
authors = ["John William Ruth Miller <john.w.millr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/johnwmillr/Facer"
repository = "https://github.com/johnwmillr/Facer"
keywords = [
    "opencv",
    "image-processing",
    "face-detection",
    "dlib",
    "face-average",
    "facer",
    "face-averaging",
]

packages = [{ include = "facer" }]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4"
dlib = "^19"
matplotlib = "^3"
ffmpeg-python = "^0.2"

[tool.poetry.group.dev.dependencies]
black = ">=23,<25"
jupyterlab = "^4.3.0"
mypy = "^1.13.0"
flake8 = "^7.1.0"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.10"
strict = true
disable_error_code = "no-redef"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
